--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -79,7 +79,7 @@
                                 <div class="contact-details">
                                     <strong>Социальные сети</strong>
                                     <p>
-                                        <a href="https://github.com/mikhail-onuchin" target="_blank">GitHub: mikhail-onuchin</a>
+                                        <a href="https://github.com/D0n1s1m0" target="_blank">GitHub: D0n1s1m0</a>
                                     </p>
                                     <p>
                                         <a href="https://t.me/mikhail_onuchin" target="_blank">Telegram: @mikhail_onuchin</a>
