--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
+    <!-- Контейнер для листьев сакуры -->
+<div class="sakura-container"></div>
     <!-- Шапка сайта -->
     <header class="header">
         <div class="container">
@@ -148,5 +150,10 @@
     </footer>
 
     <script src="./scripts/main.js"></script>
+    <script src="../scripts/main.js"></script>
+<!-- Для страницы проектов добавьте также: -->
+<script src="../scripts/filters.js"></script>
+<!-- Для страницы контактов добавьте также: -->
+<script src="../scripts/form-validation.js"></script>
 </body>
 </html>
