--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
+    <!-- Контейнер для листьев сакуры -->
+<div class="sakura-container"></div>
     <header class="header">
         <div class="container">
             <div class="header-brand">
@@ -136,5 +138,6 @@
     </footer>
 
     <script src="../scripts/form-validation.js"></script>
+   <script src="../scripts/main.js"></script>
 </body>
 </html>
