--- a/pages/diary.html
+++ b/pages/diary.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
+    <!-- Контейнер для листьев сакуры -->
+<div class="sakura-container"></div>
     <header class="header">
         <div class="container">
             <div class="header-brand">
