--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
+    <!-- Контейнер для листьев сакуры -->
+<div class="sakura-container"></div>
     <header class="header">
         <div class="container">
             <div class="header-brand">
@@ -160,7 +162,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="../scripts/main.js"></script>
     <script src="../scripts/filters.js"></script>
 </body>
 </html>
