--- a/pages/projects.html
+++ b/pages/projects.html
@@ -12,8 +12,8 @@
     <link rel="preload" href="../scripts/project-viewer.js" as="script">
     
     <!-- Предзагрузка ключевых изображений проектов -->
-    <link rel="preload" href="../images/projects/ecommerce.jpg" as="image">
-    <link rel="preload" href="../images/projects/task-manager.jpg" as="image">
+    <link rel="preload" href="../images/project2.jpg" as="image">
+    <link rel="preload" href="../images/project1.jpg" as="image">
     
     <!-- Основные стили -->
     <link rel="stylesheet" href="../styles/styles.css">
