--- a/index.html
+++ b/index.html
@@ -208,7 +208,9 @@
     </footer>
 
     <!-- Скрипты в конце body для быстрой загрузки -->
+    <!-- Скрипты в конце body для быстрой загрузки -->
     <script src="./scripts/main.js" defer></script>
+    <script src="./scripts/theme-switcher.js" defer></script>
     <script src="./scripts/filters.js" defer></script>
 </body>
 </html>
