--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -200,7 +200,8 @@
         </div>
     </footer>
 
-    <script src="../scripts/form-validation.js" defer></script>
+      <script src="../scripts/form-validation.js" defer></script>
+    <script src="../scripts/theme-switcher.js" defer></script>
     
     <!-- Inline скрипт для быстрой инициализации -->
     <script>
