--- a/pages/diary.html
+++ b/pages/diary.html
@@ -203,9 +203,8 @@
             </div>
         </div>
     </footer>
-
     <script src="../scripts/diary-manager.js" defer></script>
-    
+    <script src="../scripts/theme-switcher.js" defer></script>
     <!-- Inline скрипт для быстрой инициализации -->
     <script>
         // Быстрая инициализация дневника
