--- a/pages/projects.html
+++ b/pages/projects.html
@@ -285,6 +285,7 @@
 
     <script src="../scripts/filters.js" defer></script>
     <script src="../scripts/project-viewer.js" defer></script>
+    <script src="../scripts/theme-switcher.js" defer></script>
     
     <!-- Inline скрипт для быстрой инициализации -->
     <script>
