--- a/pages/projects.html
+++ b/pages/projects.html
@@ -116,7 +116,7 @@
                     <!-- Проект 2 -->
                     <article class="project-card" data-category="mobile" data-date="2024-01-10" data-complexity="medium">
                         <img 
-                            src="../images/projects/task-manager.jpg" 
+                            src="../images/project3.jpg" 
                             alt="Мобильное приложение для управления задачами"
                             loading="lazy"
                             width="400"
@@ -151,7 +151,7 @@
                     <!-- Проект 3 -->
                     <article class="project-card" data-category="design" data-date="2023-12-20" data-complexity="medium">
                         <img 
-                            src="../images/projects/ui-design.jpg" 
+                            src="../images/project4.jpg" 
                             alt="UI/UX дизайн системы"
                             loading="lazy"
                             width="400"
@@ -186,7 +186,7 @@
                     <!-- Проект 4 -->
                     <article class="project-card" data-category="web" data-date="2023-11-15" data-complexity="high">
                         <img 
-                            src="../images/projects/corporate-portal.jpg" 
+                            src="../images/project3.jpg" 
                             alt="Корпоративный портал"
                             loading="lazy"
                             width="400"
@@ -221,7 +221,7 @@
                     <!-- Проект 5 -->
                     <article class="project-card" data-category="learning" data-date="2023-10-01" data-complexity="low">
                         <img 
-                            src="../images/projects/personal-website.jpg" 
+                            src="../images/project2.jpg" 
                             alt="Личный сайт-визитка"
                             loading="lazy"
                             width="400"
